--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,44 +1,47 @@
 <div class="about-page-main" id="about-page-main">
-  <div @animateSlideInFromTop class="page-content-intro-hr"> about developer </div>
+  <div @animateSlideInFromTop class="page-content-intro-hr">developer</div>
 
-  <div @animateForwardStagger class="cards-container">
-
+  <div @staggerInFromRight class="cards-container">
     <div class="card-container animate-stagger card-left">
-      <div class="card-icon" (click)="redirectToProjects()"><i class="bi bi-phone"></i></div>
+      <div class="card-icon" (click)="redirectToProjects()">
+        <i class="bi bi-phone"></i>
+      </div>
       <div class="card-title">Responsive UI</div>
     </div>
 
     <div class="card-container animate-stagger card-center">
-      <div class="card-icon" (click)="redirectToProjects()"><i class="bi bi-code-slash"></i></div>
+      <div class="card-icon" (click)="redirectToProjects()">
+        <i class="bi bi-code-slash"></i>
+      </div>
       <div class="card-title">Angular 16+</div>
     </div>
 
     <div class="card-container animate-stagger card-right">
-      <div class="card-icon" (click)="redirectToProjects()"><i class="bi bi-plug"></i></div>
+      <div class="card-icon" (click)="redirectToProjects()">
+        <i class="bi bi-plug"></i>
+      </div>
       <div class="card-title">RESTful APIs</div>
     </div>
-
   </div>
 
-  <div @animateForwardStagger  class="about-content">
-
+  <div @animateForwardStagger class="about-content">
     <div class="animate-stagger about-container">
-      <div class="set-heading"> backgrond</div>
+      <div class="set-heading">backgrond</div>
       <div class="set-container">
         <p>
-          <i class="bi bi-exclamation-square-fill"></i> I’m a passionate Frontend
-          Developer with a strong focus on building high-performance single-page
-          applications using Angular framework. 
-          Angular framework architecture allows me to create maintainable and robust applications that provide an excellent user experience.
+          I’m a passionate Frontend Developer with a strong focus on building
+          high-performance single-page applications using Angular framework.
+          Angular framework architecture allows me to create maintainable and
+          robust applications that provide an excellent user experience.
         </p>
       </div>
     </div>
-   
+
     <div class="animate-stagger about-container">
       <div class="set-heading">skills & expertise</div>
       <div class="set-container">
         <p>
-          <i class="bi bi-exclamation-square-fill"></i> Proficient in
+          Proficient in
           <span class="key-skills">Responsive UI Designs</span>,
           <span class="key-skills">Angular 16+</span>,
           <span class="key-skills">TypeScript</span>,
@@ -49,20 +52,18 @@
           <span class="key-skills">RESTful API integration</span>,
           <span class="key-skills">Unit Testing</span>,
           <span class="key-skills">RxJs</span>,
-          <span class="key-skills">Search Engine Opitization & Performance Optimization</span>, and
-          <span class="key-skills">Source Control</span> (GitHub & GitHub).
-        </p> 
+          <span class="key-skills"
+            >Search Engine Opitization & Performance Optimization</span
+          >, and <span class="key-skills">Source Control</span> (GitHub &
+          GitHub).
+        </p>
 
-        <div class="btn-container">
+        <!-- <div class="btn-container">
           <div name="explore" class="explore" (click)="redirectToProjects()">
             explore projects
           </div>
-        </div>
-
+        </div> -->
       </div>
     </div>
-
   </div>
 </div>
-
-
