refined the homepage UI layout

--- a/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
+++ b/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
@@ -34,7 +34,7 @@
           type="button"
           (click)="redirectToProjects()"
         >
-          projects
+          projects <i class="bi bi-chevron-right"></i>
         </button>
         <button
           name="contact"
