--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div id="home-page-main" class="home-page-main">
   <div class="homepage-content-section intro-container">
-    <div class="developer-image-container">
+    <!-- <div class="developer-image-container">
       <img
         @animateZoomIn
         class="developer-image"
@@ -8,41 +8,37 @@
         alt="Yingisani"
         (click)="openHyperLink(linkedIn)"
       />
-    </div>
+    </div> -->
+
     <div @animateSlideInFromTop class="developer-name">
       Hi, I’m <span class="name">Yingi</span>
     </div>
+
+    <div class="developer-title">
+      <div @animateFadeIn class="titles-container">
+        <div class="title-item">front-end developer</div>
+      </div>
+    </div>
+
     <div @animateForwardStagger class="quick-links">
-      <span
-        class="animate-stagger link-item"
-        (click)="openHyperLink(gitHubRepo)"
-      >
-        <i class="bi bi-github"></i>
-      </span>
+      
       <span
         class="animate-stagger link-item in"
         (click)="openHyperLink(linkedIn)"
       >
         <i class="bi bi-linkedin"></i
       ></span>
-      <span class="animate-stagger link-item" (click)="openHyperLink(whatsapp)">
-        <i class="bi bi-whatsapp"></i>
+
+      <span
+        class="animate-stagger link-item"
+        (click)="openHyperLink(gitHubRepo)"
+      >
+        <i class="bi bi-github"></i>
       </span>
 
       <span class="animate-stagger link-item" (click)="redirectToContactUs()">
         <i class="bi bi-envelope-fill"></i>
       </span>
-    </div>
-
-    <div class="developer-title">
-      <div @animateFadeIn class="titles-container">
-        <div class="title-item">
-          <i class="bi bi-award-fill"></i>  front-end developer (angular)
-        </div>
-        <div class="title-item">
-          <i class="bi bi-award-fill"></i> B.Sc Hon. Computing (Cum Lauda)
-        </div>
-      </div>
     </div>
 
     <div @animateReverseStagger class="developer-skills-container">
@@ -95,7 +91,7 @@
         (click)="redirectToProjects()"
       >
         Explore projects
-        <i class="bi bi-box-arrow-up-right"></i>
+        <i class="bi bi-chevron-right"></i>
       </button>
     </div>
   </div>
