--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -25,8 +25,18 @@
         .developer-name {
             font-size: $font-size-lg + 8px;
             font-weight: bold;
+
             .name {
                 color: $error-color;
+            }
+        }
+
+        .developer-title {
+            text-transform: uppercase;
+            font-size: $font-size-lg + 5px;
+            margin-bottom: 5px;
+            .title-item {
+                min-width: 140px;
             }
         }
 
@@ -36,8 +46,8 @@
             column-gap: 15px;
             justify-content: center;
             margin: 0px 20%;
-            border-bottom: 0.1em solid rgb(#e5e5e5, 1);
-            padding-bottom: 22px;
+            border-bottom: 0.1em solid rgb(#e5e5e5, 0.8);
+            padding-bottom: 30px;
 
             i {
                 font-size: 20px;
@@ -64,27 +74,6 @@
             }
         }
 
-        .developer-title {
-            text-transform: capitalize;
-            font-size: $font-size-md + 2px;
-            // margin: 0px 4% 8px;
-            // border-bottom: 0.1em solid rgb(#e5e5e5, 1);
-            // padding-bottom: 15px;
-
-            .titles-container {
-                display: flex;
-                flex-wrap: wrap;
-                flex-direction: row;
-                column-gap: 10px;
-                justify-content: center;
-
-                .title-item {
-                    // border: 0.1em solid rgb(#e5e5e5, 1);
-                    min-width: 140px;
-                }
-            }
-        }
-
         .developer-skills-container {
             display: flex;
             flex-direction: row;
@@ -92,6 +81,7 @@
             gap: 10px;
             justify-content: center;
             font-size: $font-size-sm;
+            padding: 20px 0 16px;
 
             .developer-skill {
                 background-color: $light-secondery-bg-color;
@@ -123,7 +113,7 @@
             line-height: 1.6;
             margin: 8px 0% 0px;
             border-top: 0.1em solid rgb(#e5e5e5, 1);
-            padding-top: 15px;
+            padding-top: 25px;
 
             .highlight {
                 font-weight: bold;
@@ -170,8 +160,6 @@
     }
 
     @include respond-to("pro-sm") {
-
-        //features section
         .intro-container {
             grid-template-columns: 1fr;
         }
@@ -179,39 +167,16 @@
 
     @include respond-to("pre-sm") {
         .intro-container {
-
             padding: 20px 5%;
             border-radius: $spacing-sm;
             box-shadow: $light-box-shadow;
-
-            .developer-image-container {
-                .developer-image {
-                    height: 110px;
-                }
-            }
-
-            .developer-title {
-                .titles-container {
-                    column-gap: 8px;
-                    .title-item {
-                        // border: 0.1em solid rgb(#e5e5e5, 1);
-                        min-width: 80px;
-                    }
-                }
-            }
         }
     }
 
     @include respond-to("pro-xs") {
 
-        //features section
         .intro-container {
-            .developer-title {
-                font-size: $font-size-md + 1px;
-            }
-
             .developer-intro {
-                padding: $spacing-sm $spacing-xs ;
                 margin: 0 5%;
             }
         }
@@ -226,10 +191,6 @@
         //features section
         .intro-container {
             padding: 20px 0%;
-
-            .developer-title {
-                font-size: $font-size-md;
-            }
 
             .developer-intro {
 
@@ -251,7 +212,7 @@
             }
 
             .intro-btn-container {
-                margin-top: -14px;
+                margin-top: -5px;
 
                 .intro-btn {
                     padding: 9px 15px;
