added chevron icon for projects buttons

--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -78,7 +78,7 @@
 
       <div class="btn-container">
         <div name="explore" class="explore" (click)="redirectToProjects()">
-          explore projects
+          explore projects  <i class="bi bi-chevron-right"></i>
         </div>
       </div>
     </div>
