--- a/src/styles/pages/_skills-set.scss
+++ b/src/styles/pages/_skills-set.scss
@@ -165,14 +165,14 @@
                 .btn-container {
                     text-align: center;
                     font-size: $font-size-xs;
-                    margin-bottom: $spacing-xs;
+                    margin: $spacing-xs;
 
                     .explore {
                         display: block;
                         text-transform: uppercase;
                         padding: $spacing-sm - 2px;
                         background-color: $error-color;
-                        margin: $spacing-md 25% 0;
+                        margin: $spacing-xl 25% ;
                         border-radius: $spacing-xs;
                         color: $light-neutral-font-color;
                     }
